--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ langchain
 langchain-community
 langchain-openai
 langchain-huggingface
+langchain-text-splitters
 faiss-cpu
 sentence-transformers
 beautifulsoup4
 requests
 python-dotenv
+pypdf
